<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewSearch"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="@dimen/largeMargin"
        app:cardBackgroundColor="@color/whiteExtraDark"
        app:cardCornerRadius="@dimen/largeMargin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageViewSearch"
            style="@style/standardIcon"
            android:layout_gravity="center|start"
            android:layout_marginStart="@dimen/standardMargin"
            android:background="@color/whiteExtraDark"
            android:contentDescription="@string/descriptionSearch"
            android:src="@drawable/ic_search" />

        <EditText
            android:id="@+id/editTextSearch"
            style="@style/titleEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="46dp"
            android:layout_marginEnd="34dp"
            android:background="@color/whiteExtraDark"
            android:hint="@string/hintSearchNotes"
            android:importantForAutofill="no"
            android:textSize="14sp" />

    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/smallMargin"
        android:orientation="vertical"
        android:overScrollMode="never"
        android:transitionGroup="true"
        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardViewSearch"
        app:spanCount="2" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standardMargin"
        android:backgroundTint="@color/orange"
        android:contentDescription="@string/descriptionFab"
        android:src="@drawable/ic_add"
        app:borderWidth="0dp"
        app:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@null"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>