<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/rootCardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardElevation="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/largeMargin">

                <ImageView
                    android:id="@+id/imageViewButtonBack"
                    style="@style/standardIcon"
                    android:contentDescription="@string/descriptionIconBack"
                    android:src="@drawable/ic_arrow_back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/rootTimePicker"
                    android:padding="@dimen/smallMargin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@id/imageViewButtonBack"
                    app:layout_constraintEnd_toStartOf="@id/imageViewAccept"
                    app:layout_constraintStart_toEndOf="@id/imageViewButtonBack"
                    app:layout_constraintTop_toTopOf="@id/imageViewButtonBack">

                    <ImageView
                        android:id="@+id/imageViewClock"
                        style="@style/standardIcon"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:contentDescription="@string/descriptionTimePicker"
                        android:src="@drawable/ic_clock"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textViewReminderTime"
                        style="@style/textDate"
                        android:layout_marginStart="@dimen/standardMargin"
                        android:text="@string/hintAddReminder"
                        app:layout_constraintBottom_toBottomOf="@id/imageViewClock"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/imageViewClock"
                        app:layout_constraintTop_toTopOf="@id/imageViewClock" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <ImageView
                    android:id="@+id/imageViewAccept"
                    style="@style/standardIcon"
                    android:contentDescription="@string/descriptionIconAccept"
                    android:src="@drawable/ic_check_locked"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/viewColorIndicator"
                    style="@style/viewIndicator"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imageViewAccept" />

                <EditText
                    android:id="@+id/editTextTitle"
                    style="@style/titleEditText"
                    android:layout_marginTop="@dimen/standardMargin"
                    android:importantForAutofill="no"
                    android:nextFocusDown="@id/editTextContent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/viewColorIndicator"
                    tools:ignore="LabelFor" />

                <EditText
                    android:id="@+id/editTextContent"
                    style="@style/contentEditText"
                    android:layout_marginTop="@dimen/extraSmallMargin"
                    android:importantForAutofill="no"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/editTextTitle"
                    tools:ignore="LabelFor" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.core.widget.NestedScrollView>

    <include
        android:id="@+id/rootBottomSheet"
        layout="@layout/item_choose_color" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>